samples/_failures_safe/1761320353_ab916f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94f2ad7a.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_94f2ad7a.c:172:13: error: expected declaration or statement at end of input
  172 |             Token token;
      |             ^~~~~
./samples/SAFE/__tmp_94f2ad7a.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94f2ad7a.c:172:13: error: expected declaration or statement at end of input
